# micropython-osc

./: .gitignore  LICENSE.md  README.md  pyproject.toml  run_async_server.sh  run_minimal_server.sh  run_server.sh  run_tests.py  run_tests.sh  setup.cfg
.github/workflows/: python-package.yml
examples/: async_server.py  boot.py  enc_oscclient.py  main.py  minimal_server.py  oscpanel.py  socketutil.py  wlan.py
tests/: test_client.py  test_common.py  test_dispatch.py  test_load.py  test_server.py
uosc/: __init__.py  __main__.py  client.py  common.py  dispatch.py  fakelogging.py  server.py  socketutil.py  threadedclient.py
uosc/tools/: async_server.py  minimal_server.py
